--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ESD — Marcel</title>
   <link rel="stylesheet" href="./src/style.scss">
-  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
 </head>
 <body>
   <section class="pre-header">
@@ -14,8 +15,8 @@
       <button class="lang-choose"><i class="fas fa-globe-europe"></i><i class="fas fa-caret-down"></i></button>
       <a href="tel:+33600000000"><i class="fas fa-phone"></i> Allo Marcel ?</a>
     </div>
-    <div class="message">10% sur toutes les courses avec le code <strong>HAPPY10</strong></div>
-    <a href="#" class="espace-chauffeur"><i class="fas fa-car"></i> Espace chauffeur</a>
+    <div class="message">10% sur toutes les courses avec le code <strong>HAPPY10</strong></div>
+    <a href="#" class="espace-chauffeur"><i class="fas fa-car"> </i>Espace chauffeur</a>
   </section>
 
   <header>
@@ -24,10 +25,7 @@
         <img src="./src/assets/logo.png" alt="Marcel Logo">
       </div>
 
-      <div class="user-links">
-        <a href="#" class="login">Connexion</a>
-        <a href="#" class="register">Inscription</a>
-      </div>
+      <div class="user-links"><a href="#" class="login">Connexion</a><a href="#" class="register">Inscription</a></div>
     </section>
 
     <nav class="bottom-header">
@@ -48,7 +46,7 @@
   <main>
     <h1 class="hero">Marcel, c'est votre plateforme de réservation de voitures avec chauffeurs privés en Ile-de-France.</h1>
 
-    <div class="content">
+    <!-- <div class="content">
       <form action="#" method="POST" class="booking">
         <h2 class="booking__title">Réserver un trajet</h2>
         <div class="form-group booking__when">
@@ -166,7 +164,7 @@
           </div>
         </section>
       </section>
-    </div>
+    </div> -->
   </main>
 
   <!-- <script src="./src/index.js"></!-->
