--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <section class="pre-header">
     <div class="pre-header__links">
       <button class="lang-choose"><i class="fas fa-globe-europe"></i><i class="fas fa-caret-down"></i></button>
-      <a href="tel:+33600000000"><i class="fas fa-phone"></i> Allo Marcel ?</a>
+      <a href="tel:+33600000000"><i class="fas fa-phone"></i>Allo Marcel ?</a>
     </div>
     <div class="message">10% sur toutes les courses avec le code <strong>HAPPY10</strong></div>
-    <a href="#" class="espace-chauffeur"><i class="fas fa-car"> </i>Espace chauffeur</a>
+    <a href="#" class="espace-chauffeur"><i class="fas fa-car"></i>Espace chauffeur</a>
   </section>
 
   <header>
@@ -46,7 +46,7 @@
   <main>
     <h1 class="hero">Marcel, c'est votre plateforme de réservation de voitures avec chauffeurs privés en Ile-de-France.</h1>
 
-    <!-- <div class="content">
+    <div class="content">
       <form action="#" method="POST" class="booking">
         <h2 class="booking__title">Réserver un trajet</h2>
         <div class="form-group booking__when">
@@ -71,11 +71,11 @@
             <div class="icons">
               <i class="fas fa-subway"></i>
               <i class="fas fa-plane"></i>
-              <i class="fas fa-location"></i>
+              <i class="fas fa-location-arrow"></i>
             </div>
           </div>
 
-          <div class="address-input">
+          <div class="add-step-input">
             <button class="add-step"><i class="fas fa-plus"></i> Ajouter une étape dans la course</button>
             <i class="fas fa-random"></i>
           </div>
@@ -89,7 +89,7 @@
             <div class="icons">
               <i class="fas fa-subway"></i>
               <i class="fas fa-plane"></i>
-              <i class="fas fa-location"></i>
+              <i class="fas fa-location-arrow"></i>
             </div>
           </div>
         </div>
@@ -97,18 +97,19 @@
         <div class="form-group booking__panel">
           <label for="panel">Pancarte</label>
           <input type="checkbox" name="panel" id="panel">
+          <div class="checkbox"></div>
         </div>
 
         <div class="form-group booking__datetime">
-          <div class="input">
+          <div class="input date">
             <i class="far fa-calendar"></i>
             <input type="date" name="date" id="date">
           </div>
 
-          <div class="input">
+          <div class="input time">
             <i class="far fa-clock"></i>
-            <input type="number" min="0" max="23" step="1" name="date" id="date">
-            <input type="number" min="0" max="49" step="1" name="date" id="date">
+            <input type="number" min="0" max="23" step="1" name="date" id="date" placeholder="16h">
+            <input type="number" min="0" max="49" step="1" name="date" id="date" placeholder="50min">
           </div>
         </div>
 
@@ -119,7 +120,7 @@
 
             <div class="info">
               <div class="persons"><i class="fas fa-user"></i> 4</div>
-              <div class="persons"><i class="fas fa-suitcase"></i> 2</div>
+              <div class="luggage"><i class="fas fa-suitcase"></i> 2</div>
             </div>
           </div>
 
@@ -129,7 +130,7 @@
 
             <div class="info">
               <div class="persons"><i class="fas fa-user"></i> 4</div>
-              <div class="persons"><i class="fas fa-suitcase"></i> 2</div>
+              <div class="luggage"><i class="fas fa-suitcase"></i> 2</div>
             </div>
           </div>
 
@@ -139,7 +140,7 @@
 
             <div class="info">
               <div class="persons"><i class="fas fa-user"></i> 4</div>
-              <div class="persons"><i class="fas fa-suitcase"></i> 2</div>
+              <div class="luggage"><i class="fas fa-suitcase"></i> 2</div>
             </div>
           </div>
         </div>
@@ -159,12 +160,12 @@
         <section class="offer offer--purple">
           <img class="background" src="./src/assets/happy-man.jpg" alt="Happy Man">
           <div class="content">
-            <h3><span>Avec Marcel,</span> quand vous décolez les prix restent bas</h3>
+            <h3><span>Avec Marcel,</span><br>quand vous décolez les prix restent bas</h3>
             <a href=">">Découvrir l'offre aéroports</a>
           </div>
         </section>
       </section>
-    </div> -->
+    </div>
   </main>
 
   <!-- <script src="./src/index.js"></!-->
